UPDATE: ADD FUNCTIONS AND JAVASCRIPT FOR SIGNUP, WORKING PAGES

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -8,8 +8,8 @@
     <title>Ajex</title>
 </head>
 <body>
-    <a href="">sign in></a>
-    <a href="">
+    <a href="pages/sign-in">sign in></a>
+    <a href="pages/sign-up">
         sign up
     </a>
     <script src="{% static 'js/frontend-script.js' %}"></script>
