--- a/project/pages/sign-in.html
+++ b/project/pages/sign-in.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Account</title>
 </head>
 <body>
-<form action="">
+<form action="" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username" id="username">
     <label for="password">Password</label>
     <input type="password" name="password" id="password">
-    <button type="submit">Login Account</button>
+    <input type="submit" value="Sign In">
 </form>
 </body>
 </html>
