HOTFIX: PAGE SIGN UP 100 % FUNCTION

--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/frontend-style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/index/style.css' %}">
     <title>Ajex</title>
 </head>
 <body>
@@ -12,6 +12,6 @@
     <a href="pages/sign-up">
         sign up
     </a>
-    <script src="{% static 'js/frontend-script.js' %}"></script>
+    <script src="{% static 'js/index/script.js' %}"></script>
 </body>
 </html>
