FEAT: overhaul login and signup with API and database integration
This update revamps the login and account creation flows. Both are now connected through API endpoints and integrated with the database. The implementation is working correctly and ready for use.

Next steps include improving the codebase, documenting the new flows, and shifting focus to the main page.

Signed-off-by: devlongen <iago.mendonca_2005@hotmail.com>

--- a/project/pages/sign-up.html
+++ b/project/pages/sign-up.html
@@ -45,6 +45,6 @@
             </form>
         </section>
     </main>
-    <script src="{% static 'js/users/post.js' %}"></script>
+    <script src="{% static 'js/users/insert_user.js' %}"></script>
 </body>
 </html>
