--- a/project/pages/sign-in.html
+++ b/project/pages/sign-in.html
@@ -1,16 +1,20 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create Account</title>
+    <title>Login Account</title>
+    <link rel="stylesheet" href="{% static 'css/users/sign-in.css' %}">
 </head>
 <body>
 <form action="" method="POST">
-    <label for="username">Username</label>
+    <label for="username">Username or Email</label>
     <input type="text" name="username" id="username">
     <label for="password">Password</label>
     <input type="password" name="password" id="password">
     <input type="submit" value="Sign In">
 </form>
+
+<script src="{% static 'js/users/validated_user.js' %}"></script>
 </body>
 </html>
