--- a/project/pages/sign-up.html
+++ b/project/pages/sign-up.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account - Ajex</title>
-    <link rel="stylesheet" href="{% static 'css/users/forms.css' %}">
+    <link rel="stylesheet" href="{% static 'css/users/sign-up.css' %}">
 
 </head>
 <body>
